GG UI: Show postgres db version

--- a/konga/views/homepage.ejs
+++ b/konga/views/homepage.ejs
@@ -30,4 +30,5 @@
 <script>
   window.enableLogs = <%=angularDebugEnabled%>;
   window.konga_version = "<%=konga_version%>";
+  window.postgres_version = "<%=postgres_version%>";
 </script>
