--- a/konga/assets/js/app/routes/views/route-modal.html
+++ b/konga/assets/js/app/routes/views/route-modal.html
@@ -15,6 +15,16 @@
         <small>* For hosts, paths, methods and protocols, press enter to apply every value you type</small>
       </div>
     </div>
+    <div class="form-group" ng-class="{'has-error' : errors.name}">
+      <label class="col-sm-3 control-label">Name <br><em><small class="help-block">optional</small></em></label>
+      <div class="col-sm-9">
+        <input ng-model="route.name" class="form-control">
+        <div class="text-danger" ng-if="errors.name" data-ng-bind="errors.name"></div>
+        <p class="help-block">
+          The name of the Route.
+        </p>
+      </div>
+    </div>
     <div class="form-group" ng-class="{'has-error' : errors.hosts}">
       <label class="col-sm-3 control-label">Hosts <br><em>
         <small class="help-block">semi-optional</small>
@@ -77,6 +87,36 @@
           A list of HTTP methods that match this Route. At least one of <code>hosts</code>, <code>paths</code>, or
           <code>methods</code>
           must be set.
+        </p>
+      </div>
+    </div>
+    <div class="form-group">
+      <label class="col-sm-3 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+      <div class="col-sm-9">
+        <chips ng-model="route.tags">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+        <p class="help-block">
+          An optional set of strings associated with the Route, for grouping and filtering.
+        </p>
+      </div>
+    </div>
+    <div class="form-group" ng-class="{'has-error' : errors.regex_priority}">
+      <label class="col-sm-3 control-label">Regex priority <br><em><small class="help-block">optional</small></em></label>
+      <div class="col-sm-9">
+        <input type="number" class="form-control" ng-model="route.regex_priority">
+        <p class="help-block">
+          A number used to choose which route resolves a given request when several routes match it using regexes simultaneously.
+          When two routes match the path and have the same <code>regex_priority</code>, the older one (lowest <code>created_at</code>) is used.
+          Note that the priority for non-regex routes is different (longer non-regex routes are matched before shorter ones).
+          Defaults to <code>0</code>.
         </p>
       </div>
     </div>
