--- a/konga/assets/js/app/services/views/add-service-modal.html
+++ b/konga/assets/js/app/services/views/add-service-modal.html
@@ -36,6 +36,25 @@
       </div>
     </div>
 
+    <div class="form-group">
+      <label class="col-sm-4 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+      <div class="col-sm-7">
+        <chips ng-model="service.tags">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+        <p class="help-block">
+          An optional set of strings associated with the Service, for grouping and filtering.
+        </p>
+      </div>
+    </div>
+
     <div class="form-group" ng-class="{'has-error' : errors.protocol}">
       <label class="col-sm-4 control-label">Protocol <br><em>
         <small class="help-block">semi-optional</small>
