--- a/konga/assets/js/app/routes/views/route-modal.html
+++ b/konga/assets/js/app/routes/views/route-modal.html
@@ -25,6 +25,24 @@
         </p>
       </div>
     </div>
+    <div class="form-group">
+      <label class="col-sm-3 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+      <div class="col-sm-9">
+        <chips ng-model="route.tags">
+          <chip-tmpl>
+            <div class="default-chip">
+              {{chip}}
+              <i class="mdi mdi-close" remove-chip></i>
+            </div>
+          </chip-tmpl>
+          <input chip-control/>
+        </chips>
+        <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+        <p class="help-block">
+          An optional set of strings associated with the Route, for grouping and filtering.
+        </p>
+      </div>
+    </div>
     <div class="form-group" ng-class="{'has-error' : errors.hosts}">
       <label class="col-sm-3 control-label">Hosts <br><em>
         <small class="help-block">semi-optional</small>
@@ -90,21 +108,39 @@
         </p>
       </div>
     </div>
-    <div class="form-group">
-      <label class="col-sm-3 control-label">Tags <br><em><small class="help-block">optional</small></em></label>
+    <div class="form-group" ng-class="{'has-error' : errors.headers}">
+      <label class="col-sm-3 control-label">Headers <br><em>
+        <small class="help-block">semi-optional</small>
+      </em></label>
       <div class="col-sm-9">
-        <chips ng-model="route.tags">
-          <chip-tmpl>
-            <div class="default-chip">
-              {{chip}}
-              <i class="mdi mdi-close" remove-chip></i>
-            </div>
-          </chip-tmpl>
-          <input chip-control/>
-        </chips>
-        <p class="help-block">Tip: Press <code>Enter</code> to accept a value.</p>
+        <div class="col-sm-12" ng-repeat="element in route.bHeaders">
+          <div class="col-sm-3" style="margin-top: 15px">
+            <input type="text" class="form-control" ng-model="element.name">
+          </div>
+          <div class="col-sm-8">
+            <chips ng-model="element.values">
+              <chip-tmpl>
+                <div class="default-chip">
+                  {{chip}}
+                  <i class="mdi mdi-close" remove-chip></i>
+                </div>
+              </chip-tmpl>
+              <input chip-control/>
+            </chips>
+            <p class="help-block">Tip: Press <code>Enter</code> to accept a value for values.</p>
+          </div>
+          <div class="col-sm-1">
+            <button type="button" title="Remove Header" class="btn btn-danger"
+                    ng-click="route.bHeaders.splice($index,1)">
+              <i class="mdi mdi-close"></i>
+            </button>
+          </div>
+        </div>
+        <div class="col-sm-12">
+          <button class="btn btn-primary" style="margin-left: 15px" ng-click="addMoreHeader()">Add</button>
+        </div>
         <p class="help-block">
-          An optional set of strings associated with the Route, for grouping and filtering.
+          A list of headers that will cause this Route to match if present in the request. The <code>Host</code> header cannot be used with this attribute: hosts should be specified using the <code>hosts</code> attribute.
         </p>
       </div>
     </div>
